[stdevMac] refs #2031 Added /api/v?/networks/.. endpoints to swagger whithout security.
