# src/api/network.go
@@ -21,7 +21,7 @@ import (
 //	addr - An IP:Port string
 func connectionHandler(gateway Gatewayer) http.HandlerFunc {
 
-	// swagger:operation GET /api/v1/network/connections networkConnections
+	// swagger:operation GET /api/v1/network/connection networkConnection
 	//
 	// This endpoint returns a specific connection.
 	//
@@ -43,6 +43,7 @@ func connectionHandler(gateway Gatewayer) http.HandlerFunc {
 	//       properties:
 	//         id:
 	//           type: integer
+	//           format: int64
 	//         address:
 	//           type: string
 	//         state:
@@ -52,18 +53,24 @@ func connectionHandler(gateway Gatewayer) http.HandlerFunc {
 	//           type: string
 	//         last_sent:
 	//           type: integer
+	//           format: int64
 	//         last_received:
 	//           type: integer
+	//           format: int64
 	//         connected_at:
 	//           type: integer
+	//           format: int64
 	//         outgoing:
 	//           type: boolean
 	//         mirror:
 	//           type: integer
+	//           format: int32
 	//         listen_port:
 	//           type: integer
+	//           format: int32
 	//         height:
 	//           type: integer
+	//           format: int64
 	//         is_trusted_peer:
 	//           type: boolean
 	//         unconfirmed_verify_transaction:
@@ -72,10 +79,13 @@ func connectionHandler(gateway Gatewayer) http.HandlerFunc {
 	//           properties:
 	//             burn_factor:
 	//               type: integer
+	//               format: int32
 	//             max_transaction_size:
 	//               type: integer
+	//               format: int32
 	//             max_decimals:
 	//               type: integer
+	//               format: int32
 	//   default:
 	//     $ref: '#/responses/genericError'
 
@@ -108,7 +118,6 @@ func connectionHandler(gateway Gatewayer) http.HandlerFunc {
 
 // Connections wraps []Connection
 //
-// swagger:model connectionsStruct
 type Connections struct {
 	Connections []readable.Connection `json:"connections"`
 }
@@ -133,7 +142,80 @@ func NewConnections(dconns []daemon.Connection) Connections {
 //  direction: [optional] "outgoing" or "incoming". If not provided, both are included.
 func connectionsHandler(gateway Gatewayer) http.HandlerFunc {
 
-	// TODO For v3
+	// swagger:operation GET /api/v1/network/connections networkConnections
+	//
+	// This endpoint returns all outgoings connections.
+	//
+	// ---
+	// produces:
+	// - application/json
+	// parameters:
+	// - name: states
+	//   in: query
+	//   description: Connection status.
+	//   required: false
+	//   enum: [pending, connected, introduced]
+	//   type: string
+	// - name: direction
+	//   in: query
+	//   description: Direction of the connection.
+	//   required: false
+	//   enum: [connected, introduced]
+	//   type: string
+	// responses:
+	//   200:
+	//     description: This endpoint return a connection struct
+	//     schema:
+	//       type: array
+	//       items:
+	//         properties:
+	//           id:
+	//             type: integer
+	//             format: int64
+	//           address:
+	//             type: string
+	//           state:
+	//             type: string
+	//             enum: [pending, connected, introduced]
+	//           user_agent:
+	//             type: string
+	//           last_sent:
+	//             type: integer
+	//             format: int64
+	//           last_received:
+	//             type: integer
+	//             format: int64
+	//           connected_at:
+	//             type: integer
+	//             format: int64
+	//           outgoing:
+	//             type: boolean
+	//           mirror:
+	//             type: integer
+	//             format: int32
+	//           listen_port:
+	//             type: integer
+	//             format: int32
+	//           height:
+	//             type: integer
+	//             format: int64
+	//           is_trusted_peer:
+	//             type: boolean
+	//           unconfirmed_verify_transaction:
+	//             description: Represent unconfirmed transactions
+	//             type: object
+	//             properties:
+	//               burn_factor:
+	//                 type: integer
+	//                 format: int32
+	//               max_transaction_size:
+	//                 type: integer
+	//                 format: int32
+	//               max_decimals:
+	//                 type: integer
+	//                 format: int32
+	//   default:
+	//     $ref: '#/responses/genericError'
 
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodGet {
@@ -202,7 +284,6 @@ func connectionsHandler(gateway Gatewayer) http.HandlerFunc {
 
 
 // This struct is for endpoint /api/v1/defaultConnections response.
-// swagger:response defaultConnectionsResponse
 type DefaultConnectionsResponse struct {
 	DefaultConnections []string
 }
@@ -214,18 +295,23 @@ type DefaultConnectionsResponse struct {
 // Method: GET
 func defaultConnectionsHandler(gateway Gatewayer) http.HandlerFunc {
 
-	// swagger:route GET /api/v1/network/defaultConnections defaultConnections
+	// swagger:operation GET /api/v1/network/defaultConnections defaultConnections
 	//
 	// defaultConnectionsHandler returns the list of default hardcoded bootstrap addresses.\n They are not necessarily connected to.
 	//
-	//     Produces:
-	//     - application/json
+	// ---
+	// produces:
+	// - application/json
 	//
-	//     Schemes: http, https
-	//
-	//     Responses:
-	//       default: genericError
-	//       200: defaultConnectionsResponse
+	// responses:
+	//   200:
+	//     description: This endpoint return an list of default connections.
+	//     schema:
+	//       type: array
+	//       items:
+	//         type: string
+	//   default:
+	//     $ref: '#/responses/genericError'
 
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodGet {
@@ -246,7 +332,25 @@ func defaultConnectionsHandler(gateway Gatewayer) http.HandlerFunc {
 // Method: GET
 func trustConnectionsHandler(gateway Gatewayer) http.HandlerFunc {
 
-	// TODO For v3
+	// swagger:operation GET /api/v1/network/connections/trust networkConnectionsTrust
+	//
+	// trustConnectionsHandler returns all trusted connections.\n They are not necessarily connected to. In the default configuration, these will be a subset of the default hardcoded bootstrap addresses.
+	//
+	// ---
+	// produces:
+	// - application/json
+	//
+	// responses:
+	//   200:
+	//     description: This endpoint return a list of trusted connections.
+	//     schema:
+	//       type: array
+	//       items:
+	//         type: string
+	//   default:
+	//     $ref: '#/responses/genericError'
+
+	// TODO Add URI: /api/v1/network/trust to README.md or Most be URI: /api/v1/network/connections/trust
 
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodGet {
@@ -266,7 +370,25 @@ func trustConnectionsHandler(gateway Gatewayer) http.HandlerFunc {
 // Method: GET
 func exchgConnectionsHandler(gateway Gatewayer) http.HandlerFunc {
 
-	// TODO For v3
+	// swagger:operation GET /api/v1/network/connections/exchange networkConnectionsExchange
+	//
+	// This endpoint returns all connections found through peer exchange
+	//
+	// ---
+	// produces:
+	// - application/json
+	//
+	// responses:
+	//   200:
+	//     description: This endpoint return a list of all connections found through peer exchange.
+	//     schema:
+	//       type: array
+	//       items:
+	//         type: string
+	//   default:
+	//     $ref: '#/responses/genericError'
+
+	// TODO Add URI: /api/v1/network/exchange to README.md or Most be URI: /api/v1/network/connections/exchange
 
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodGet {
@@ -288,7 +410,27 @@ func exchgConnectionsHandler(gateway Gatewayer) http.HandlerFunc {
 //	id: ID of the connection
 func disconnectHandler(gateway Gatewayer) http.HandlerFunc {
 
-	// TODO For v3
+	// swagger:operation GET /api/v1/network/connection/disconnect networkConnectionsDisconnect
+	//
+	// This endpoint disconnects a connection by ID or address
+	//
+	// ---
+	//
+	// parameters:
+	// - name: id
+	//   in: query
+	//   description: Address id.
+	//   required: true
+	//   type: string
+	//
+	// produces:
+	// - application/json
+	//
+	// responses:
+	//   200:
+	//     description: This endpoint
+	//   default:
+	//     $ref: '#/responses/genericError'
 
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodPost {
